ensure stripboard doesn't get too big

--- a/client-web/src/style.scss
+++ b/client-web/src/style.scss
@@ -199,7 +199,7 @@ $transparent-black: #000a;
       min-width: 300px;
       max-width: 20%;
 
-      max-height: 90vh;
+      max-height: 85vh;
       overflow-y: auto;
 
       color: white;
